# da-ayr-webapp

./: .dockerignore  .env.aws_parameter_store.template  .env.aws_secrets_manager.template  .env.e2e_tests.template  .env.env_var.template  .env_template  .flaskenv  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .stylelintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  Procfile  README.md  add_date_test_files.py  add_to_main_index.py  apigateway_policy.json.template  aws_attach_policy.json  build.sh  config.py  conftest.py  create_test_files.py  dev-data.sql  docker-compose.test.yml  docker-compose.yaml  dockerfile  ecs_deploy.sh  entry_point.sh  git_update.sh  lambda_policy.json  local_flask_app.py  main_app.py  manage.py  opensearch_scores.txt  package-lock.json  package.json  pull_request_template.md  (+9 more)
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependabot_approve_and_enable_auto_merge_for_minor_and_patch_prs.yml  dependabot_automerge_minor_and_patch.yml  dependency-review.yml  deploy_to_sandbox.yml  docker-build-ecr-push.yml  e2e-tests.yml  pre_commit.yml  python-app.yml  trigger_non_prod_cd.yml  trigger_staging_cd.yml  unit_tests.yml
.storybook/: main.js  preview.js
app/: __init__.py  apps.py  auth.py  logger_config.py  models.py  template_filters.py  urls.py  views.py
app/demos/: custom_validators.py  forms.py  routes.py
app/main/: __init__.py  context_processors.py  flask_config_helpers.py  forms.py  routes.py
app/migrations/: 0001_initial.py
app/static/: 1000.9d34ee9289572366ca25.js  1043.2df16d5d71722e89284f.js  1047.67b322ed141b0c133982.js  1064.59764c7e52b11e4dfb0d.js  1245.9eb1037889c679af243b.js  1277.9323868c7f1e70bd5d07.js  132.953a1b2e797c840651f0.js  1401.e95d699e5a44f9687fff.js  1504.db94eb5450fec3b0e3e9.js  1528.e220c124fd330b45c836.js  1592.b2fdc1d56d5ca8b3a68d.js  1605.a0a1188949299e09fc6e.js  1658.efc6b13e5d7b0004b38c.js  1718.b578149d342da1b856d7.js  1811.d2ae08a492a0451c7e2e.js  1831.9ef90f15e64d822c6032.js  1843.e1a01a9d2e3d397a0a77.js  1916.6fb1816a944fa2673607.js  1948.9401c0d8382fd768377f.js  2020.2373e68f69abc4b380a2.js  2029.bac5701b6e90e26cd65e.js  2077.93c3427dd74c3d80f595.js  2084.ffb77f116ae5c87f3191.js  2103.512a61fbafca050c2827.js  2111.8ee090041df9f23652ab.js  2152.dd228068e48c8622e2a2.js  2161.c002cd5efd21c79874cc.js  2180.9fb476fff4f247f8417d.js  2206.9ee181f2db6e0cb2c7ea.js  2383.c832c31bd8104d7c5782.js  2520.3d0f445bea7132848f1e.js  2558.ccc03213e1571dff359b.js  2568.df5424c37c056deb45e3.js  2619.29c6a7aa486722716655.js  2678.55945b18940954a13310.js  2683.ec6d07afa285eec16596.js  2703.d5bf16ded109edbbbd3f.js  2778.68335f7131cf506f108f.js  2788.436aa3560a46e72811db.js  2836.f5a3fb3719cd3cbea967.js  (+141 more)
app/templates/: base.html  start-page.html  template.html
app/tests/: assertions.py  conftest.py  factories.py  mock_database.py  test_access_token_sign_in_required.py  test_aws_open_search.py  test_ayr_user.py  test_base_schemas.py  test_browse.py  test_browse_consignment.py  test_browse_series.py  test_browse_transferring_body.py  test_browse_view.py  test_browse_view_series.py  test_browse_view_tbody.py  test_build_browse_all_query.py  test_build_browse_consignment_query.py  test_build_browse_query.py  test_build_browse_series_query.py  test_build_browse_transferring_body_query.py  test_config.py  test_date_filters_validator.py  test_date_formatter.py  test_date_validator.py  test_download.py  test_download_utils.py  test_example.py  test_flask_config_helpers.py  test_get_keycloak_openid_object.py  test_header.py  test_homepage.py  test_jinja_filters.py  test_keycloak_login_required_decorator.py  test_keycloak_manager.py  test_login.py  test_logout.py  test_macros.py  test_middlewares.py  test_page_routes.py  test_pagination.py  (+21 more)
ayr_app/: apps.py
ayr_project/: asgi.py  auth.py  settings.py  urls.py  views.py  wsgi.py
configs/: aws_config.py  aws_parameter_store_config.py  aws_secrets_manager_config.py  base_config.py  db_utils.py  env_config.py  local_config.py  pa11y_ci_precommit.js  testing_config.py
custom_hooks/: pa11y_ci_precommit.sh  safety_check.sh
data_management/: conftest.py
data_management/access-copy-converter/: Dockerfile
data_management/access_copy_converter/: Dockerfile  Dockerfile.bulk_access_copy_converter
data_management/opensearch/: Dockerfile  index_file_content_and_metadata_in_opensearch.py  index_file_content_and_metadata_in_opensearch_from_aws.py  lambda_function.py  requirements-dev.txt
data_management/opensearch_indexer/: Dockerfile  requirements.txt
e2e_tests/: conftest.py  dockerfile  e2e_tests.reg_build_and_run.sh  e2e_tests.reg_run.sh  e2e_tests.run_and_build.sh  footer_tests.py  pyproject.toml  test_browse.py  test_browse_consignment.py  test_browse_series.py  test_browse_transferring_body.py  test_download.py  test_footer.py  test_header.py  test_homepage.py  test_login.py  test_pagination.py  test_poc_search.py  test_record.py  test_record_metadata.py  test_routes.py  test_search.py  test_search_non_fuzzy_fields.py  test_search_transferring_body.py  test_static_links.py  test_visual_regression.py  utils.py
e2e_tests/health_checks/: pytest.ini  test_health_checks.py
e2e_tests/navigation_journeys/: test_browse_to_record_journey.py  test_search_to_record_journey.py
e2e_tests/playwright-report/: report.html
e2e_tests/utils/: assertions.py  user_management.py
e2e_tests/utils_scripts/: user_management.py
local_services/: .docker.env  .env.template  create_opensearch_snapshot.sh  dev-data.sql  docker-compose.ci.yml  docker-compose.yml  opensearch-entrypoint.sh  pg_hba.conf  postgres-init.sh  ssl_certs_setup.sh  upload_test_files_to_minio.py
performance_tests/: locustfile.py
project/: asgi.py  settings.py  urls.py  wsgi.py
storybook/: render-macro-tasks.json  render_macros.py
templates/: base_template.html  index.html  metadata.html  records.html  search.html
test_results/: coverage-access_copy_converter.xml
(+337 files in other folders)
