[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.bandit]
exclude_dirs = ['*_test.py', '*/test_*.py', 'venv', 'node_modules']
skips = ["B105"]

[tool.poetry.dependencies]
python = "^3.11"
cssmin = "0.2.0"
flask-compress = "1.17"
flask-talisman = "1.1.0"
flask = "3.0.3"
govuk-frontend-jinja = "3.4.0"
govuk-frontend-wtf = "3.2.0"
gunicorn = "23.0.0"
jsmin = "3.0.1"
python-dotenv = "1.0.1"
redis = "5.2.0"
python-keycloak = "4.6.2"
boto3 = "^1"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.10"
setuptools = "^74.1.3"
flask-s3 = "^0.3.3"
pillow = "^11.0.0"
opensearch-py = "^2.7.1"
requests-aws4auth = "^1.3.1"

[tool.poetry.group.dev.dependencies]
testing-postgresql = "^1.3.0"
bandit = "1.7.10"
black = "24.10.0"
flake8-bugbear = "24.8.19"
bs4 = "^0.0.2"
isort = "5.13.2"
moto = "^5.0.18"
pep8-naming = "0.14.1"
pip-tools = "7.4.1"
pyopenssl = "^24"
pytest-cov = "^5.0.0"
pytest-flask = "^1.2.0"
pytest-playwright = "0.5.2"
pre-commit = "^4.0.1"
safety = "3.2.10"
factory-boy = "^3.3.0"
pyjwt = "^2.9.0"
pytest-repeat = "^0.9.3"
pytest-playwright-visual = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.isort]
line_length = 80
