[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.bandit]
exclude_dirs = ['*_test.py', '*/test_*.py', 'venv', 'node_modules']
skips = ["B105"]

[tool.poetry.dependencies]
python = "^3.11"
cssmin = "0.2.0"
flask-compress = "1.17"
flask-talisman = "1.1.0"
flask = "3.1.0"
govuk-frontend-jinja = "3.4.1"
govuk-frontend-wtf = "3.2.0"
gunicorn = "23.0.0"
jsmin = "3.0.1"
python-dotenv = "1.0.1"
redis = "5.2.1"
python-keycloak = "5.3.0"
boto3 = "^1"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.10"
setuptools = "^74.1.3"
flask-s3 = "^0.3.3"
pillow = "^11.1.0"
opensearch-py = "^2.8.0"
requests-aws4auth = "^1.3.1"
bleach = "^6.2.0"

[tool.poetry.group.dev.dependencies]
testing-postgresql = "^1.3.0"
bandit = "1.8.2"
black = "25.1.0"
flake8-bugbear = "24.12.12"
bs4 = "^0.0.2"
isort = "6.0.0"
moto = "^5.0.28"
pep8-naming = "0.14.1"
pip-tools = "7.4.1"
pyopenssl = "^25"
pytest-cov = "^6.0.0"
pytest-flask = "^1.2.0"
pytest-playwright = "0.7.0"
pre-commit = "^4.1.0"
safety = "3.2.14"
factory-boy = "^3.3.3"
pyjwt = "^2.10.1"
pytest-repeat = "^0.9.3"
pytest-playwright-visual = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.isort]
line_length = 80
