[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.bandit]
exclude_dirs = ['*_test.py', '*/test_*.py', 'venv', 'node_modules']
skips = ["B105"]

[tool.poetry.dependencies]
python = "^3.11"
cssmin = "0.2.0"
flask-compress = "1.23"
flask-talisman = "1.1.0"
flask = "3.1.2"
govuk-frontend-jinja = "3.9.0"
govuk-frontend-wtf = "3.2.0"
gunicorn = "23.0.0"
jsmin = "3.0.1"
python-dotenv = "1.2.1"
redis = "7.0.1"
python-keycloak = "5.8.1"
boto3 = "^1"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.11"
setuptools = "^78.1.1"
flask-s3 = "^0.3.3"
pillow = "^12.0.0"
opensearch-py = "^3.0.0"
pymupdf = "^1.26.6"
requests-aws4auth = "^1.3.1"
bleach = "^6.3.0"
detect-secrets = "^1.5.0"
poetry-plugin-export = "^1.9.0"
marshmallow = "^4.1.0"

[tool.poetry.group.dev.dependencies]
testing-postgresql = "^1.3.0"
bandit = "1.8.6"
black = "25.9.0"
flake8-bugbear = "25.10.21"
bs4 = "^0.0.2"
isort = "7.0.0"
moto = "^5.1.15"
pep8-naming = "0.15.1"
pip-tools = "7.5.1"
pyopenssl = "^25"
pytest-cov = "^7.0.0"
pytest-flask = "^1.2.0"
pytest-playwright = "0.7.1"
pre-commit = "^4.3.0"
safety = "3.7.0"
factory-boy = "^3.3.3"
pyjwt = "^2.10.1"
pytest-repeat = "^0.9.4"
pytest-playwright-visual = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.isort]
line_length = 80
