[tool.poetry]
name = "e2e-tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9.1,<4.0"
pytest-playwright-visual = "^2.1.2"
pytest-playwright = "^0.7.0"
PyJWT = "^2.8.0"
itsdangerous = "^2.2.0"
python-keycloak = "^5.7.0"
playwright = "^1.54.0"
cryptography = "45.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
